files/iptables.rules
# Generated by iptables-save v1.6.0 on Wed Dec 14 19:35:03 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [301:37808]
:fw - [0:0]
-A INPUT -j fw
-A FORWARD -j fw
-A fw -p icmp -j ACCEPT
-A fw -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A fw -i lo -j ACCEPT
-A fw -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A fw -p tcp -j REJECT --reject-with tcp-reset
-A fw -p udp -j REJECT --reject-with icmp-port-unreachable
-A fw -j REJECT --reject-with icmp-proto-unreachable
COMMIT
# Completed on Wed Dec 14 19:35:03 2016
